@@ -16,6 +16,7 @@ RELEASE  VERSION/DATE TO BE FILLED IN LATER
       product from the default Visual Studio
     - Add TEMPFILESUFFIX to allow a customizable filename extension, as
       described in the patch attached to issue #2431.
+    - Doc updates around Default(), and the various *TARGETS variables.
 
   From Daniel Moody:
     - Improved support for VC14.1 and Visual Studio 2017, as well as arm and arm64 targets.
@@ -24,6 +25,7 @@ RELEASE  VERSION/DATE TO BE FILLED IN LATER
   From Tobias Herzog
     - Enhance cpp scanner regex logic to detect if/elif expressions without whitespaces but
       parenthesis like "#if(defined FOO)" or "#elif!(BAR)" correctly.
+
 
 RELEASE 3.0.3 - Mon, 07 Jan 2019 20:05:22 -0400
   NOTE: 3.0.2 release was dropped because there was a packaging bug. Please consider all 3.0.2
